Adicionando imagens da aula 2

--- a/notebooks/02-sistemas_lineares.ipynb
+++ b/notebooks/02-sistemas_lineares.ipynb
@@ -402,11 +402,11 @@
     "\n",
     "Uma outra maneira de representar a mesma operação é usando um diagrama de blocos, como em:\n",
     "\n",
-    "![Y = X*A](fig/um_sistema.png \"A multiplicação matricial pode ser interpretada como aplicar uma função ou um sistema\")\n",
+    "![Y = X*A](um_sistema.png \"A multiplicação matricial pode ser interpretada como aplicar uma função ou um sistema\")\n",
     "\n",
     "Esse tipo de diagrama de blocos é parecido com aqueles usados em matemática para representar que [funções são mapeamentos de elementos entre um domínio e um contra-domínio](https://en.wikipedia.org/wiki/Map_(mathematics)). No nosso caso, estamos deixando explícito que estamos mapeando vetores que representam ingredientes para vetores que representam seus custos correspondentes:\n",
     "\n",
-    "![Y = X*A](fig/um_sistema_receitas_custos.png \"A multiplicação matricial pode ser interpretada como aplicar uma função ou um sistema\")\n",
+    "![Y = X*A](um_sistema_receitas_custos.png \"A multiplicação matricial pode ser interpretada como aplicar uma função ou um sistema\")\n",
     "\n",
     "---\n",
     "\n",
