--- a/notebooks/02-sistemas_lineares.ipynb
+++ b/notebooks/02-sistemas_lineares.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -53,16 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.8\n"
+     ]
+    }
+   ],
    "source": [
     "# Resolva o exercício aqui\n",
-    "custo_por_ingrediente = [10, 15, 18] # O que esses números representam?\n",
-    "quantidades = [0, 0, 0]\n",
+    "custo_por_ingrediente = [10, 15, 18] # O que esses números representam? R: Custo de cada ingrediente\n",
+    "quantidades = [1, 0.2, 0.1]\n",
     "custo_total = 0\n",
     "for n in range(len(custo_por_ingrediente)): # O que precisa ser feito para cada ingrediente?\n",
-    "    pass"
+    "    custo_total += custo_por_ingrediente[n] * quantidades[n]\n",
+    "\n",
+    "print(custo_total)"
    ]
   },
   {
@@ -124,12 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.8\n"
+     ]
+    }
+   ],
    "source": [
-    "custo_por_ingrediente = np.array([10, 15, 18]) # O que esses números representam?\n",
-    "quantidades = np.array([0, 0, 0])"
+    "custo_por_ingrediente = np.array([10, 15, 18]) # O que esses números representam? R: Custo de cada ingrediente\n",
+    "quantidades = np.array([1, 0.2, 0.1])\n",
+    "\n",
+    "# 2 formas:\n",
+    "custo_total = np.sum(custo_por_ingrediente * quantidades)\n",
+    "# custo_total = custo_por_ingrediente @ quantidades \n",
+    "\n",
+    "print(custo_total)"
    ]
   },
   {
@@ -150,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "10.6\n"
      ]
     }
    ],
@@ -180,12 +192,15 @@
     "Manteiga | R\\$15,00 (pote com 200g)\n",
     "Chocolate em pó |R\\$18,00 (caixa com 200g)\n",
     "Creme de leite | R\\$2,80 (caixa com 200mL)\n",
+    "Coco ralado | R\\$35,00 (caixa com 1Kg)\n",
+    "\n",
     "\n",
     "Em nosso modelo, gostaríamos de usar um único vetor `custo_por_ingrediente` tanto para o brigadeiro quanto para o ganache, e passamos a ter um vetor `quantidades_brigadeiro` para o brigadeiro e um vetor `quantidades_ganache` para o ganache.\n",
     "\n",
     "Complete a solução abaixo para calcular o custo de cada uma das fornadas de doce.\n",
     "\n",
     "1. Complete a definição dos vetores `quantidades_brigadeiro` e `quantidades_ganache`. Como podemos fazer para representar o fato de que um brigadeiro não usa creme de leite e que um ganache não usa manteiga?\n",
+    "Colocando o valor 0 onde não há.\n",
     "2. Como a lista de vetores `custos_totais` é calculada? Qual é o conteúdo dela?\n",
     "3. Adicione o \"doce de leite\" ao cardápio. A receita dele é muito simples: deixamos uma lata de leite condensado ferver na panela de pressão por 40 minutos. Lembre-se de fazer essa adição sem alterar o código abaixo da linha marcada.\n",
     "4. Adicione o \"doce de coco\" ao cardápio. Uma fornada de 20 doces usa 200g de leite condensado e 250g de coco ralado. O pacote de 1kg de coco ralado custa R$35,00.  Lembre-se de fazer essa adição sem alterar o código abaixo da linha marcada."
@@ -193,27 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "shapes (4,) and (0,) not aligned: 4 (dim 0) != 0 (dim 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_15976/130213917.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mcustos_totais\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquantidades\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mcustos_totais\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcusto_por_ingrediente\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcustos_totais\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36minner\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: shapes (4,) and (0,) not aligned: 4 (dim 0) != 0 (dim 0)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14.8, 9.4]\n"
      ]
     }
    ],
    "source": [
-    "custo_por_ingrediente = np.array([10, 15, 18, 2.8])\n",
+    "custo_por_ingrediente = np.array([10, 15, 18, 2.8, 35])\n",
     "\n",
-    "quantidades_brigadeiro = np.array([]) # Complete esse\n",
-    "quantidades_ganache = np.array([]) # Complete esse\n",
+    "quantidades_brigadeiro = np.array([1, 0.2, 0.1, 0, 0]) # Complete esse\n",
+    "quantidades_ganache = np.array([0, 0.2, 0.2, 1, 0]) # Complete esse\n",
     "\n",
     "quantidades = [quantidades_brigadeiro, quantidades_ganache]\n",
     "\n",
@@ -222,6 +232,27 @@
     "for idx, q in enumerate(quantidades):\n",
     "    custos_totais.append (np.inner(custo_por_ingrediente, q))\n",
     "print(custos_totais)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 0.2, 0.1, 0. , 0. ],\n",
+       "       [0. , 0.2, 0.2, 1. , 0. ]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(quantidades)"
    ]
   },
   {
@@ -238,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -275,12 +306,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 5)\n",
+      "(5, 1)\n",
+      "[[14.8 ]\n",
+      " [ 9.4 ]\n",
+      " [10.  ]\n",
+      " [13.75]]\n"
+     ]
+    }
+   ],
    "source": [
-    "X = np.array( [ [], [] ])\n",
-    "Y = np.array( [ [], [] ])"
+    "# brigadeiro, ganache, doce de leite, doce de coco\n",
+    "X = np.array( [ [1, 0.2, 0.1, 0, 0], [0, 0.2, 0.2, 1, 0], [1, 0, 0, 0, 0], [0.5, 0, 0, 0, 0.25]])\n",
+    "Y = np.array( [ [10], [15], [18], [2.8], [35] ])\n",
+    "\n",
+    "print(X @ Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 5)\n",
+      "(5, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)\n",
+    "print(Y.shape)"
    ]
   },
   {
@@ -339,15 +405,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -5]\n",
-      " [-11]]\n",
       "[[ -5]\n",
       " [-11]]\n"
      ]
@@ -357,7 +421,6 @@
     "x_ = np.array([ [1, 2], [3, 4] ])\n",
     "y_ = np.array([ [-1], [-2]])\n",
     "z_ = x_ @ y_\n",
-    "print(z_)\n",
     "z_ = np.dot(x_, y_)\n",
     "print(z_)"
    ]
@@ -394,6 +457,27 @@
     "2. Se temos as matrizes $X$, com uma linha por receita e uma coluna por ingrediente, e $A$, com uma linha por ingrediente e apenas uma coluna, (a) qual deve ser a dimensão da matriz $Y=XA$? (b) O que cada elemento de $Y$ representa?\n",
     "\n",
     "3. Vamos supor que temos uma outra opção de mercado, com outros custos para os ingredientes. O que aconteceria com a interpretação dos elementos da matriz $Y$ do ítem acima se os preços do novo mercado fossem representados como uma nova coluna na matriz $A$?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[0,1], [2,3]])\n",
+    "y = np.array([[2], [1]])\n",
+    "z = x @ y\n",
+    "print(z)"
    ]
   },
   {
@@ -473,17 +557,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c: 189.99941873571902, s: 189.99970936786062\n",
+      "c: 4.000006458492093, s: 4.000003229246076\n",
+      "c: 10.300000000000209, s: 10.300000000000214\n",
+      "c: 10.0, s: 10.0\n"
+     ]
+    }
+   ],
    "source": [
     "def executar_modelo(c, s):\n",
-    "    # Faça sua função aqui, implementando as equações do sistema!\n",
-    "    c_novo = 0\n",
-    "    s_novo = 0\n",
+    "    \n",
+    "    for _ in range(120): #10 anos\n",
+    "        c_novo = (0.8 * c) + (0.2 * s)\n",
+    "        s_novo = (-0.1 * c) + (1.1 * s)\n",
+    "        c = c_novo\n",
+    "        s = s_novo\n",
     "\n",
     "    return c_novo, s_novo\n",
-    "\n"
+    "\n",
+    "#c, s\n",
+    "situacoes = [ [10, 100], [6, 5], [10.3, 10.3], [10, 10] ]\n",
+    "\n",
+    "for s in situacoes:\n",
+    "    c_novo, s_novo = executar_modelo(s[0], s[1])\n",
+    "    print(f'c: {c_novo}, s: {s_novo}')"
    ]
   },
   {
@@ -517,6 +621,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c: [189.99941874], s: [189.99970937]\n",
+      "c: [4.00000646], s: [4.00000323]\n",
+      "c: [10.3], s: [10.3]\n",
+      "c: [10.], s: [10.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def executar_modelo2(c,s):\n",
+    "    pop = np.array([[c],[s]])\n",
+    "    dinamica = np.array([[0.8, 0.2],[-0.1, 1.1]])\n",
+    "    for _ in range(120):\n",
+    "        pop = dinamica @ pop\n",
+    "    return pop\n",
+    "\n",
+    "situacoes = [ [10, 100], [6, 5], [10.3, 10.3], [10, 10] ]\n",
+    "\n",
+    "for s in situacoes:\n",
+    "    c_novo, s_novo = executar_modelo2(s[0], s[1])\n",
+    "    print(f'c: {c_novo}, s: {s_novo}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -541,6 +676,31 @@
     "\n",
     "1. Realize manualmente (no papel) a multiplicação acima. Evidencie como cada coluna da matriz do lado esquerdo da equação depende somente das colunas correspondentes na matriz de entradas no lado direito da equação, isto é, $c^{(2)}$, por exemplo, não influencia $c^{(1)}$.\n",
     "2. Execute todas as simulações de variações do problema que fizemos nos ítens anteriores, mas agora usando a formulação matricial para simularmos todos simultaneamente.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.00000646 10.        ]\n",
+      " [ 4.00000323 10.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def executar_modelo2(c,s):\n",
+    "    pop = np.array([c, s])\n",
+    "    dinamica = np.array([[0.8, 0.2],[-0.1, 1.1]])\n",
+    "    for i in range(120):\n",
+    "        pop = dinamica @ pop\n",
+    "    print(pop)\n",
+    "\n",
+    "executar_modelo2([6, 10], [5, 10])"
    ]
   },
   {
@@ -581,6 +741,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.00000646 10.        ]\n",
+      " [ 4.00000323 10.        ]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.00000646, 10.        ],\n",
+       "       [ 4.00000323, 10.        ]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def executar_modelo2(c,s):\n",
+    "    pop = np.array([c, s]).T\n",
+    "    dinamica = np.array([[0.8, 0.2],[-0.1, 1.1]]).T\n",
+    "    for i in range(120):\n",
+    "        pop = pop @ dinamica\n",
+    "    print(pop.T)\n",
+    "    return pop.T\n",
+    "\n",
+    "executar_modelo2([6, 10], [5, 10])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -598,6 +795,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Resposta:**\n",
+    "1. Depende do foco. \n",
+    "- Se o elemento for aluno, cada elemento é uma linha.\n",
+    "- Se o elemento for avaliação, cada elemento é uma coluna\n",
+    "\n",
+    "2. \n",
+    "- Linha representa a equação de cada animal\n",
+    "- Coluna representa os dados de cada animal\n",
+    "\n",
+    "3. Depende do cenário"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Etapa 3\n",
     "# Exercício 12\n",
     "**Objetivo: Entender o algoritmo PageRank como navegação aleatória e probabilidade**\n",
@@ -609,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -640,15 +853,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Resposta**\n",
+    "1. Sim e não. \n",
+    "- Da página 0 para 2 - Não\n",
+    "- Da página 2 para 0 - Sim\n",
+    "\n",
+    "2. Não.\n",
+    "\n",
+    "3. Não."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.1069  0.21509 0.35683 0.32118]\n"
+      "[0.10769 0.21452 0.35674 0.32105]\n"
      ]
     }
    ],
@@ -696,6 +923,13 @@
     "2. Qual é a soma dos elementos de $Y$?\n",
     "3. O que cada elemento da matriz $Y$ significa em termos das probabilidades ligadas ao nosso problema?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -757,11 +991,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.10714286 0.21428571 0.35714286 0.32142857]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def randomsurfer_pagerank(A, i_init=0):\n",
+    "    hops = np.zeros(A.shape[0]) # hops[i] = quantas vezes o surfista caiu na página p_i'\n",
+    "    hops[i_init] = 1 # Em que página o surfista está?\n",
+    "    for count in range(100000): # Quantos saltos o surfista vai fazer?\n",
+    "        hops = A @ hops # Conto uma passagem na página que estou\n",
+    "    return hops\n",
+    "\n",
+    "print(randomsurfer_pagerank(A, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escreva sua solução aqui\n"
+    "#2) [0.10769 0.21452 0.35674 0.32105]"
    ]
   },
   {
