--- a/notebooks/02-sistemas_lineares.ipynb
+++ b/notebooks/02-sistemas_lineares.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -162,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.6\n"
+      "14.8\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "       [0. , 0.2, 0.2, 1. , 0. ]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -306,15 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 5)\n",
-      "(5, 1)\n",
       "[[14.8 ]\n",
       " [ 9.4 ]\n",
       " [10.  ]\n",
@@ -332,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +758,7 @@
        "       [ 4.00000323, 10.        ]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +798,7 @@
     "- Se o elemento for aluno, cada elemento é uma linha.\n",
     "- Se o elemento for avaliação, cada elemento é uma coluna\n",
     "\n",
-    "2. \n",
+    "2. Análise:\n",
     "- Linha representa a equação de cada animal\n",
     "- Coluna representa os dados de cada animal\n",
     "\n",
@@ -822,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -868,14 +866,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.10769 0.21452 0.35674 0.32105]\n"
+      "[0.10731 0.21502 0.35643 0.32124]\n"
      ]
     }
    ],
@@ -925,11 +923,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p align=\"center\" >\n",
+    "    <img src=\"../my%20assets/02-sistemas_lineares/exercise13.jpeg\" alt=\"Kitten\" title=\"A cute kitten\" width=\"350\" height=\"250\" /> \n",
+    "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz Y = \n",
+      " [[0]\n",
+      " [1]\n",
+      " [1]\n",
+      " [1]]\n",
+      "A soma dos elementos de Y = [3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[0, 1, 0, 0], [1, 0, 1, 0], [1, 0, 0, 1], [1, 1, 1, 0]]) # linhas\n",
+    "x = np.array([[1,0,0,0]]).T #colunas\n",
+    "\n",
+    "# y = x@A:\n",
+    "# A = np.array([[0, 1, 0, 0], [1, 0, 1, 0], [1, 0, 0, 1], [1, 1, 1, 0]]) # colunas\n",
+    "# x = np.array([[1,0,0,0]]) #linhas\n",
+    "# y = x @ A\n",
+    "\n",
+    "y = A @ x\n",
+    "\n",
+    "print(f'Matriz Y = \\n {y}')\n",
+    "\n",
+    "print(f'A soma dos elementos de Y = {sum(y)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Questão 3**\n",
+    "\n",
+    "Cada elemento da matrz Y significa uma probabilidade. Dado que X é a probabilidade de eu estar em cada página e A é matriz que representa 4 páginas web com links para outras páginas, é gerado a matriz Y. A qual, por sua vez, é a probabilidade de estar em outras páginas.\n",
+    "\n",
+    "Assim:\n",
+    "[0,1,1,1]\n",
+    "\n",
+    "- Probabilidade de estar na página 0: 0%\n",
+    "- Probabilidade de estar na página 1: 33,33%\n",
+    "- Probabilidade de estar na página 2: 33,33%\n",
+    "- Probabilidade de estar na página 3: 33,33%"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -991,14 +1042,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.10714286 0.21428571 0.35714286 0.32142857]\n"
+      "[nan nan nan nan]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0b/t7v75s011nxd0q97zmc5_fm80000gn/T/ipykernel_33822/155921702.py:5: RuntimeWarning: overflow encountered in matmul\n",
+      "  hops = A @ hops # Conto uma passagem na página que estou\n",
+      "/var/folders/0b/t7v75s011nxd0q97zmc5_fm80000gn/T/ipykernel_33822/155921702.py:5: RuntimeWarning: invalid value encountered in matmul\n",
+      "  hops = A @ hops # Conto uma passagem na página que estou\n"
      ]
     }
    ],
@@ -1014,22 +1075,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#2) [0.10769 0.21452 0.35674 0.32105]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercício 16\n",
-    "**Objetivo: Executar o PageRank em dados de navegação reais**\n",
-    "\n",
-    "O arquivo ... tem uma matriz de navegação para dados reais... qual é a página mais relevante dentre essas?\n"
+    "Para comparar: <br>\n",
+    "2) [0.10769 0.21452 0.35674 0.32105]"
    ]
   },
   {
@@ -1062,6 +1112,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$\n",
+    "\\begin{cases}\n",
+    "    \\begin{aligned}\n",
+    "    25& = A + 2B \\\\\n",
+    "    22& = 2A + 1B + C \\\\\n",
+    "    17& = 3A + C\n",
+    "    \\end{aligned}\n",
+    "\\end{cases}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1,2,0]])\n",
+    "B = np.array([[2,1,1]])\n",
+    "C = np.array([[3,0,1]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercício 18\n",
     "**Objetivo: resolver o sistema linear por substituição**\n",
     "\n",
@@ -1081,6 +1157,15 @@
     "Isolando $B$ na segunda equação, temos $4B=8$ e, portanto, $B=2$. Voltando na primeira equação, temos $A=2-3=-1$.\n",
     "\n",
     "Aplique esse método de substituição para resolver o sistema de equações que você encontrou para o caso das compras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\" >\n",
+    "    <img src=\"../my%20assets/02-sistemas_lineares/exercise18.jpeg\" alt=\"Kitten\" title=\"A cute kitten\" width=\"350\" height=\"250\" /> \n",
+    "</p>"
    ]
   },
   {
@@ -1110,6 +1195,15 @@
     "\n",
     "1. Realize (manualmente, no papel) a multiplicação matricial na representação acima, mostrando que, de fato, representação matricial é equivalente ao sistema de equações.\n",
     "2. Encontre a representação matricial para o sistema de equações que você escreveu no exercício 17.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=\"center\" >\n",
+    "    <img src=\"../my%20assets/02-sistemas_lineares/exercise19.jpeg\" alt=\"Kitten\" title=\"A cute kitten\" width=\"350\" height=\"250\" /> \n",
+    "</p>"
    ]
   },
   {
@@ -1239,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1382,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
