--- a/notebooks/02-sistemas_lineares.ipynb
+++ b/notebooks/02-sistemas_lineares.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3 4 7]\n"
+      "[3 4 7]\n",
+      "14\n"
      ]
     }
    ],
@@ -108,7 +109,8 @@
     "a = np.array([1, 2, 7])\n",
     "b = np.array([3, 2, 1])\n",
     "c = a * b\n",
-    "print(c)"
+    "print(c)\n",
+    "print(a @ b)"
    ]
   },
   {
