--- a/notebooks/06-regressao_classificacao.ipynb
+++ b/notebooks/06-regressao_classificacao.ipynb
@@ -200,7 +200,7 @@
     "\n",
     "Nesta atividade, vamos analisar como o EQM se comporta quando variamos os coeficientes do modelo.\n",
     "\n",
-    "1. No código abaixo, complete a função `erro` para que ela calcule o EQM de um modelo linear frente a medições recebidas como entrada.\n",
+    "1. No código abaixo, complete a função `EQM` para que ela calcule o EQM de um modelo linear frente a medições recebidas como entrada.\n",
     "1. Na figura que é gerada, qual é o coeficiente angular teórico que leva ao menor EQM? Como ele se compara com o EQM teórico?\n",
     "1. Aumente o `desvio_padrao_da_medicao`. Como isso afeta o valor mínimo do EQM?"
    ]
@@ -530,7 +530,7 @@
     "y = a_real * x + b_real\n",
     "\n",
     "# Dados \"medidos\"\n",
-    "ym = y + np.random.randn(y.shape[0])*5"
+    "ym = y + np.random.randn(y.shape[0])*250"
    ]
   },
   {
@@ -559,7 +559,7 @@
     "g = grad(erro)\n",
     "\n",
     "a_modelo, b_modelo = 0.0, 0.0\n",
-    "alpha = 10**-5\n",
+    "alpha = 0.1\n",
     "for _ in range(100): # por 10 iterações...\n",
     "    pass\n",
     "    # Calcular gradiente\n",
@@ -680,7 +680,7 @@
     "O erro do nosso modelo é o EQM que relaciona $f(x,y)$ estimado pelo nosso modelo com os valores desejados 1 e -1.\n",
     "\n",
     "1. Usando o que já fizemos, use o `autograd` para estimar o modelo $f(x,y) = Ax+By+C$ à partir dos dados abaixo.\n",
-    "1. Faça um plot semelhante ao do exercício 10 mostrando os pontos de cada categoria de dados com uma cor diferente e a reta estimada.\n",
+    "1. Faça um plot semelhante ao do exercício 6 mostrando os pontos de cada categoria de dados com uma cor diferente e a reta estimada.\n",
     "1. Modifique o valor da contante `SEP` para que tenha valores menores e valores maiores. O que acontece com o modelo estimado?\n",
     "1. Modifique seu código para que ele passe a ter muito mais elementos da categoria 1 que elementos da categoria 2. O que acontece com o modelo estimado?"
    ]
@@ -806,6 +806,52 @@
     "\n",
     "dados_c1 = np.random.randn(N_DIMENSOES,N_DADOS) + SEP\n",
     "dados_c2 = np.random.randn(N_DIMENSOES,N_DADOS) - SEP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.16123034]\n",
+      " [ 0.10122426]\n",
+      " [ 0.22259538]\n",
+      " [-0.11248491]\n",
+      " [ 0.04905519]]\n",
+      "-0.024619064692574955\n"
+     ]
+    }
+   ],
+   "source": [
+    "import autograd.numpy as np_   # Thinly-wrapped version of Numpy\n",
+    "from autograd import grad\n",
+    "\n",
+    "def loss( parametros ):\n",
+    "    w, b, pontos, val = parametros\n",
+    "    est = w.T @ pontos + b\n",
+    "    mse = np_.mean( (est - val)**2)\n",
+    "    return mse\n",
+    "\n",
+    "g = grad(loss)\n",
+    "\n",
+    "pontos = np.hstack ( (dados_c1, dados_c2))\n",
+    "alvos = np.hstack ( (np.ones(N_DADOS), -1*np.ones(N_DADOS)))\n",
+    "\n",
+    "w = np.random.randn( N_DIMENSOES,1)\n",
+    "b = 0.0\n",
+    "alpha = 10**-3\n",
+    "\n",
+    "for n in range(1000):\n",
+    "    grad_ = g( (w, b, pontos, alvos) )\n",
+    "    w -= alpha*grad_[0]\n",
+    "    b -= alpha*grad_[1]\n",
+    "\n",
+    "print(w)\n",
+    "print(b)\n"
    ]
   },
   {
@@ -1440,7 +1486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "math",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1459,7 +1505,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "24edab667c607da83a3d505005d55d4e90494c095c6ef50356b97a3f44559d3d"
+    "hash": "42e34ec1a81382d7a35a13fd98192c35dabe0890684b7b0a474deec672e3df02"
    }
   }
  },
