--- a/apss/aps4/main.ipynb
+++ b/apss/aps4/main.ipynb
@@ -9,8 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.linalg import svd,diagsvd\n",
-    "\n"
+    "from scipy.linalg import svd,diagsvd"
    ]
   },
   {
